src/objects/queueHours__c.object
<CustomObject>
    <description>used to store age of a case in business time when with a specific owner</description>
    <fields>
        <fullName>Alias__c</fullName>
        <description>The name of record migrated from source org</description>
        <externalId>true</externalId>
        <label>Alias</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <description>parent record</description>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>Queue_Business_Hours</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Last_Updated__c</fullName>
        <description>last datetime used to perform calculations</description>
        <label>Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Minutes__c</fullName>
        <label>Total Business Minutes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OwnerIdString__c</fullName>
        <description>string to hold either a userid or a queueid</description>
        <label>OwnerIdString</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Name__c</fullName>
        <description>String version of owner name - could be queue or user</description>
        <label>User/Queue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>the user or queue that currently has the case under their management</description>
        <label>Enquiry Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Queue_Business_Hours</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UniqueId__c</fullName>
        <description>used to maintain records - only one record per case+owner combination</description>
        <externalId>true</externalId>
        <label>UniqueId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Role__c</fullName>
        <description>populated at creation, used for reporting purposes.</description>
        <label>User Role</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <label>Queue Business Time</label>
    <nameField>
        <displayFormat>QBT-{0000000}</displayFormat>
        <label>Business Time Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Queue Business Time</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>